Fix link do my website and update footer style

--- a/index.html
+++ b/index.html
@@ -178,7 +178,12 @@
       </form>
     </section>
     <footer class="footer">
-      <p>Todos os direitos reservados à Matheus Marinho Dev</p>
+      <p>
+        Todos os direitos reservados à
+        <a href="https://matheusmfeitoza.github.io" target="_blank"
+          >Matheus Marinho Dev</a
+        >
+      </p>
     </footer>
   </body>
 </html>
