Add a localstorage for email field

--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
         <p>Assine e fique por dentro das novidades</p>
       </div>
       <form action="" class="newsletter-form">
-        <input type="text" placeholder="Insira seu e-mail" />
-        <button type="submit">Assinar</button>
+        <input type="text" placeholder="Insira seu e-mail" id="email" />
+        <button type="submit" id="btn">Assinar</button>
       </form>
     </section>
     <footer class="footer">
@@ -185,5 +185,6 @@
         >
       </p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
